; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22565.c_crack.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22565.c_crack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"%8lx%lx\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Invalid password hash: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"Hash: %08lx%08lx\0A\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"Trying length %d\0A\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"Found pass: \00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"Pass not found\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crack(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %11 = load i32, i32* @MAX_LEN, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i32, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i8*, i8** %2, align 8
  %16 = call i32 @sscanf(i8* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %5, i32* %6)
  %17 = icmp ne i32 %16, 2
  br i1 %17, label %18, label %21

18:                                               ; preds = %1
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  store i32 1, i32* %10, align 4
  br label %88

21:                                               ; preds = %1
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i32 %22, i32 %23)
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %5, align 4
  %27 = sub nsw i32 %25, %26
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = shl i32 %29, 8
  %31 = load i32, i32* %5, align 4
  %32 = xor i32 %30, %31
  %33 = sub nsw i32 %28, %32
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = shl i32 %35, 8
  %37 = load i32, i32* %5, align 4
  %38 = xor i32 %36, %37
  %39 = sub nsw i32 %34, %38
  store i32 %39, i32* %7, align 4
  %40 = load i32, i32* %6, align 4
  %41 = load i32, i32* %7, align 4
  %42 = shl i32 %41, 8
  %43 = load i32, i32* %5, align 4
  %44 = xor i32 %42, %43
  %45 = sub nsw i32 %40, %44
  store i32 %45, i32* %7, align 4
  store i32 3, i32* %4, align 4
  br label %46

46:                                               ; preds = %78, %21
  %47 = load i32, i32* %4, align 4
  %48 = load i32, i32* @MAX_LEN, align 4
  %49 = icmp sle i32 %47, %48
  br i1 %49, label %50, label %81

50:                                               ; preds = %46
  %51 = load i32, i32* %4, align 4
  %52 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i32 %51)
  %53 = load i32, i32* %4, align 4
  %54 = sub nsw i32 %53, 4
  %55 = load i32, i32* %5, align 4
  %56 = load i32, i32* %7, align 4
  %57 = call i64 @crack0(i32 %54, i32 %55, i32 %56, i32* %14)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %77

59:                                               ; preds = %50
  %60 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %61

61:                                               ; preds = %72, %59
  %62 = load i32, i32* %3, align 4
  %63 = load i32, i32* %4, align 4
  %64 = icmp slt i32 %62, %63
  br i1 %64, label %65, label %75

65:                                               ; preds = %61
  %66 = load i32, i32* %3, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %14, i64 %67
  %69 = load i32, i32* %68, align 4
  %70 = trunc i32 %69 to i8
  %71 = call i32 @putchar(i8 signext %70)
  br label %72

72:                                               ; preds = %65
  %73 = load i32, i32* %3, align 4
  %74 = add nsw i32 %73, 1
  store i32 %74, i32* %3, align 4
  br label %61

75:                                               ; preds = %61
  %76 = call i32 @putchar(i8 signext 10)
  br label %81

77:                                               ; preds = %50
  br label %78

78:                                               ; preds = %77
  %79 = load i32, i32* %4, align 4
  %80 = add nsw i32 %79, 1
  store i32 %80, i32* %4, align 4
  br label %46

81:                                               ; preds = %75, %46
  %82 = load i32, i32* %4, align 4
  %83 = load i32, i32* @MAX_LEN, align 4
  %84 = icmp sgt i32 %82, %83
  br i1 %84, label %85, label %87

85:                                               ; preds = %81
  %86 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0))
  br label %87

87:                                               ; preds = %85, %81
  store i32 0, i32* %10, align 4
  br label %88

88:                                               ; preds = %87, %18
  %89 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %89)
  %90 = load i32, i32* %10, align 4
  switch i32 %90, label %92 [
    i32 0, label %91
    i32 1, label %91
  ]

91:                                               ; preds = %88, %88
  ret void

92:                                               ; preds = %88
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*) #2

declare dso_local i32 @printf(i8*, ...) #2

declare dso_local i64 @crack0(i32, i32, i32, i32*) #2

declare dso_local i32 @putchar(i8 signext) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
